[gd_scene load_steps=6 format=3 uid="uid://dv7ks0wr8gaga"]

[ext_resource type="Script" uid="uid://dstvxhlt8nd77" path="res://components/turret/turret.gd" id="1_csn5j"]
[ext_resource type="Texture2D" uid="uid://c3p8eikgvro2q" path="res://assets/textures/turret_placeholder.png" id="1_gh4e7"]
[ext_resource type="Script" uid="uid://bfsfyc3b0cuqi" path="res://components/turret/range_area.gd" id="2_irrmp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_irrmp"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csn5j"]
size = Vector2(32, 32)

[node name="Turret" type="CharacterBody2D"]
script = ExtResource("1_csn5j")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.480552, 0.456792, 4.81307e-07, 1)
texture = ExtResource("1_gh4e7")

[node name="RangeArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
script = ExtResource("2_irrmp")

[node name="RangeAreaCollision" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_irrmp")
debug_color = Color(0.972699, 0.165938, 0, 0.42)

[node name="BodyArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="BodyAreaCollision" type="CollisionShape2D" parent="BodyArea"]
shape = SubResource("RectangleShape2D_csn5j")

[node name="TurretCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_csn5j")
